Basic While Loop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     
 
-    <script src="./src/forloop.js"></script>
+    <!-- <script src="./src/forloop.js"></script> -->
+    <script src="./src/whileLoop.js"></script>
 </body>
 </html>
