--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     
 
     <!-- <script src="./src/forloop.js"></script> -->
-    <script src="./src/whileLoop.js"></script>
+    <!-- <script src="./src/whileLoop.js"></script> -->
+    <!-- <script src="./src/DoWhileLoop.js"></script> -->
+    <!-- <script src="./src/ForOfLoop.js"></script> -->
+    <script src="./src/ForInLoop.js"></script>
 </body>
 </html>
