--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <!-- <script src="./src/whileLoop.js"></script> -->
     <!-- <script src="./src/DoWhileLoop.js"></script> -->
     <!-- <script src="./src/ForOfLoop.js"></script> -->
-    <script src="./src/ForInLoop.js"></script>
+    <!-- <script src="./src/ForInLoop.js"></script> -->
+    <!-- <script src="./src/Practice1.js"></script> -->
+    <!-- <script src="./src/practice2.js"></script> -->
+    <!-- <script src="./src/String.js"></script> -->
+    <script src="./src/templateLiterals.js"></script>
 </body>
 </html>
