Initial Practice Done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- <script src="./src/Practice1.js"></script> -->
     <!-- <script src="./src/practice2.js"></script> -->
     <!-- <script src="./src/String.js"></script> -->
-    <script src="./src/templateLiterals.js"></script>
+    <!-- <script src="./src/templateLiterals.js"></script> -->
+    <!-- <script src="./src/stringMethods.js"></script> -->
+    <script src="./src/practice3.js"></script>
 </body>
 </html>
